Making adjusting the `isValid` check so that it doesn't allow for going from release to pre-release versions when upgrading.