@@ -17,6 +17,8 @@ package org.openrewrite.semver;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.List;
+
 import static org.assertj.core.api.Assertions.assertThat;
 
 class XRangeTest {
@@ -115,15 +117,23 @@ class XRangeTest {
     void compareRCVersion() {
         XRange xRange = XRange.build("3.5.x", null).getValue();
         assertThat(xRange).isNotNull();
-        assertThat(xRange.upgrade("3.5.0-RC1", java.util.Arrays.asList("3.5.0")).orElse(null)).isEqualTo("3.5.0");
+        assertThat(xRange.upgrade("3.5.0-RC1", List.of("3.5.0", "3.5.1-RC1")).orElse(null)).isEqualTo("3.5.0");
     }
 
     @Test
-    void rcVersionsShouldBeValidForXRange() {
-        XRange xRange = XRange.build("3.5.x", null).getValue();
+    void allowSameMetadataUpgrade() {
+        XRange xRange = XRange.build("3.5.x", "-beta").getValue();
         assertThat(xRange).isNotNull();
-        assertThat(xRange.isValid("3.5.0-RC1", "3.5.0-RC1")).isTrue();
-        assertThat(xRange.isValid("3.5.0-RC1", "3.5.0")).isTrue();
-        assertThat(xRange.isValid("3.5.0", "3.5.1-RC1")).isTrue();
+        assertThat(xRange.isValid(null, "3.5.0-beta")).isTrue();
+        assertThat(xRange.upgrade("3.4.0-beta", List.of("3.5.1", "3.5.1-beta")).orElse(null)).isEqualTo("3.5.1-beta");
+    }
+
+    @Test
+    void shouldNotSwitchToSnapshot() {
+        XRange xRange = XRange.build("3.6.x", null).getValue();
+        assertThat(xRange).isNotNull();
+        assertThat(xRange.isValid(null, "3.6.1-SNAPSHOT")).isFalse();
+        assertThat(xRange.isValid(null, "3.6.0")).isTrue();
+        assertThat(xRange.upgrade("3.4.0", List.of("3.6.0", "3.6.1-SNAPSHOT")).orElse(null)).isEqualTo("3.6.0");
     }
 }
